highlight current move add classNames lib to avoid ternary operator in dynamic class definition for code readability

--- a/src/components/Game.scss
+++ b/src/components/Game.scss
@@ -13,4 +13,7 @@
 ol,
 ul {
     padding-left: 30px;
+    li.selected {
+        font-weight: bold;
+    }
 }
